Update argparsing submodule
Recently argparsing removed cdif as a submodule and made it an external
dependency. We need to include that in this project to continue using
it.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "argparsing"]
 	path = argparsing
 	url = git@github.com:aghoward/argparsing.git
+[submodule "cdif"]
+	path = cdif
+	url = git@github.com:aghoward/cdif.git
