Replace cdif registration with argparsing conversion_factory
argparsing was updated to allow per parameter conversion functions to be
specified during registration. This obsoletes the need to register cdif
modules for per parameter-type registrations. Switches the status_code
list parsing to use a per-parameter conversion_factory

--- a/parameters/Makefile
+++ b/parameters/Makefile
@@ -7,7 +7,7 @@ AR_FLAGS +=rcs
 OBJDIR=./obj
 LIBDIR=../lib
 
-OBJECTS=${OBJDIR}/argparsing_module.o ${OBJDIR}/arguments.o
+OBJECTS=${OBJDIR}/parameter_conversions.o ${OBJDIR}/arguments.o
 LIBS=${LIBDIR}/libparameters.a
 
 .PRECIOUS: ${OBJDIR}/%.o
